test/negative/internal_rust_helper_import/Main.hx
import rust._internal.MapStorageTools;

class Main {
	static function main():Void {
		var helperType = MapStorageTools;
		trace(helperType);
	}
}
